--- a/front/src/pages/index/index.module.css
+++ b/front/src/pages/index/index.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  background-image: url("fon.png");
+  background-image: url("/fon.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
