--- a/front/src/assets/index.css
+++ b/front/src/assets/index.css
@@ -5,3 +5,10 @@
   padding: 0;
   margin: 0;
 }
+
+.custom-node {
+  border: 1px solid black;
+  border-radius: 6px;
+  padding: 10px;
+  background-color: white;
+}
