--- a/front/src/assets/index.css
+++ b/front/src/assets/index.css
@@ -7,7 +7,7 @@
 }
 
 .custom-node {
-  border: 1px solid black;
+  border: 2px solid;
   border-radius: 6px;
   padding: 10px;
   background-color: white;
